--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
   shared_preferences: ^2.0.18
+  package_info_plus: ^4.0.0
 
 dev_dependencies:
   flutter_test:
