--- a/flutter_launcher_icons.yaml
+++ b/flutter_launcher_icons.yaml
@@ -3,10 +3,10 @@ flutter_launcher_icons:
   image_path: "assets/icon/icon.png"
 
   android: "launcher_icon"
-  # image_path_android: "assets/icon/icon.png"
+  image_path_android: "assets/icon/icon.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
-  # adaptive_icon_background: "assets/icon/background.png"
-  # adaptive_icon_foreground: "assets/icon/foreground.png"
+  adaptive_icon_background: "assets/icon/icon-background.png"
+  adaptive_icon_foreground: "assets/icon/icon-foreground.png"
   # adaptive_icon_monochrome: "assets/icon/monochrome.png"
 
   ios: true
