Add required info plist settings for iOS

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>This app cannot use Bluetooth midi, as it needs to be connected to the device via a USB cable.</string>
+	<key>NSLocalNetworkUsageDescription</key>
+	<string>This app cannot connect to the device over the network, it requires a USB cable.</string>
 </dict>
 </plist>
