--- a/.github/workflows/tag-build.yml
+++ b/.github/workflows/tag-build.yml
@@ -16,7 +16,8 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: 'stable'
+          channel: stable
+          flutter-version: '3.27.2'
 
       - name: Install dependencies
         run: flutter pub get
@@ -53,7 +54,8 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: 'stable'
+          channel: stable
+          flutter-version: '3.27.2'
 
       - name: Install dependencies
         run: flutter pub get
@@ -92,7 +94,8 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: 'stable'
+          channel: stable
+          flutter-version: '3.27.2'
 
       - name: Install dependencies
         run: flutter pub get
@@ -116,7 +119,8 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: 'stable'
+          channel: stable
+          flutter-version: '3.27.2'
 
       - name: Install dependencies
         run: flutter pub get
@@ -140,7 +144,8 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: 'stable'
+          channel: stable
+          flutter-version: '3.27.2'
 
       - name: Install dependencies
         run: flutter pub get
