--- a/.github/workflows/tag-build.yml
+++ b/.github/workflows/tag-build.yml
@@ -64,6 +64,8 @@ jobs:
         run: |
           echo "${{ secrets.APPLE_CERTIFICATE }}" | base64 --decode > certificate.p12
           echo "${{ secrets.MOBILEPROVISION }}" | base64 --decode > profile.mobileprovision
+          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles/
+          cp profile.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles/
         env:
           APPLE_CERTIFICATE: ${{ secrets.APPLE_CERTIFICATE }}
           MOBILEPROVISION: ${{ secrets.MOBILEPROVISION }}
