--- a/.github/workflows/tag-build.yml
+++ b/.github/workflows/tag-build.yml
@@ -6,9 +6,33 @@ on:
       - 'v*' # Match tags starting with 'v', e.g., v1.0, v2.1.0
 
 jobs:
+  create-release:
+    name: Create Release
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Extract Version Name
+        id: extract_version
+        run: echo "::set-output name=version::${{ github.ref_name#v }}"
+
+      - name: Create GitHub Release
+        id: create_release
+        uses: actions/create-release@v1
+        with:
+          tag_name: ${{ github.ref_name }}
+          release_name: Release ${{ github.ref_name }}
+          body: "Automated release for version ${{ github.ref_name }}"
+          draft: false
+          prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   android:
     name: Build and Sign Android APK
     runs-on: ubuntu-latest
+    needs: create-release
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -34,88 +58,21 @@ jobs:
           KEY_PASSWORD: ${{ secrets.ANDROID_KEY_PASSWORD }}
         run: flutter build apk --release
 
-      - name: Upload Android APK
-        uses: actions/upload-artifact@v4
+      - name: Rename Android APK
+        run: mv build/app/outputs/flutter-apk/app-release.apk build/app/outputs/flutter-apk/nt_helper-${{ needs.create-release.outputs.version }}.apk
+
+      - name: Upload Android Artifact to Release
+        uses: actions/upload-release-asset@v1
         with:
-          name: android-apk
-          path: build/app/outputs/flutter-apk/app-release.apk
-
-      - name: Cleanup Keystore
-        run: rm release-key.jks
-
-
-  ios:
-    name: Build and Sign iOS IPA
-    runs-on: macos-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          channel: stable
-          flutter-version: '3.27.2'
-
-      - name: Install dependencies
-        run: flutter pub get
-
-      - name: Decode and Save Signing Files
-        run: |
-          echo "${{ secrets.APPLE_CERTIFICATE }}" | base64 --decode > certificate.p12
-          echo "${{ secrets.MOBILEPROVISION }}" | base64 --decode > profile.mobileprovision
-          echo "${{ secrets.DEV_MOBILEPROVISIONING_PROFILE }}" | base64 --decode > profile-dev.mobileprovision
-          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles/
-          cp profile.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles/
-          cp profile-dev.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles/
-        env:
-          APPLE_CERTIFICATE: ${{ secrets.APPLE_CERTIFICATE }}
-          MOBILEPROVISION: ${{ secrets.MOBILEPROVISION }}
-
-      - name: Install Signing Certificate
-        run: |
-          security import certificate.p12 -k ~/Library/Keychains/login.keychain-db -P "${{ secrets.APPLE_CERTIFICATE_PASSWORD }}" -T /usr/bin/codesign
-        env:
-          APPLE_CERTIFICATE_PASSWORD: ${{ secrets.APPLE_CERTIFICATE_PASSWORD }}
-
-      - name: Build iOS IPA
-        env:
-          APPLE_ID: ${{ secrets.APPLE_ID }}
-          APP_SPECIFIC_PASSWORD: ${{ secrets.APP_SPECIFIC_PASSWORD }}
-        run: |
-          flutter build ipa \
-            --release \
-            --export-options-plist=ios/exportOptions.plist
-          xcrun altool --upload-app --type ios --file build/ios/ipa/*.ipa --username "${APPLE_ID}" --password "${APP_SPECIFIC_PASSWORD}"
-
-  windows:
-    name: Build Windows App
-    runs-on: windows-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          channel: stable
-          flutter-version: '3.27.2'
-
-      - name: Install dependencies
-        run: flutter pub get
-
-      - name: Build Windows
-        run: flutter build windows
-
-      - name: Upload Windows App
-        uses: actions/upload-artifact@v4
-        with:
-          name: windows-app
-          path: build/windows/x64/runner/Release/
+          upload_url: ${{ needs.create-release.outputs.upload_url }}
+          asset_path: build/app/outputs/flutter-apk/nt_helper-${{ needs.create-release.outputs.version }}.apk
+          asset_name: nt_helper-${{ needs.create-release.outputs.version }}-android.apk
+          asset_content_type: application/vnd.android.package-archive
 
   macos:
     name: Build macOS App
     runs-on: macos-latest
+    needs: create-release
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -132,15 +89,21 @@ jobs:
       - name: Build macOS
         run: flutter build macos
 
-      - name: Upload macOS App
-        uses: actions/upload-artifact@v4
-        with:
-          name: macos-app
-          path: build/macos/Build/Products/Release/nt_helper.app
+      - name: Zip macOS App
+        run: cd build/macos/Build/Products/Release && zip -r nt_helper-${{ needs.create-release.outputs.version }}.zip nt_helper.app
 
-  linux:
-    name: Build Linux App
-    runs-on: ubuntu-latest
+      - name: Upload macOS Artifact to Release
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ needs.create-release.outputs.upload_url }}
+          asset_path: build/macos/Build/Products/Release/nt_helper-${{ needs.create-release.outputs.version }}.zip
+          asset_name: nt_helper-${{ needs.create-release.outputs.version }}-macos.zip
+          asset_content_type: application/zip
+
+  windows:
+    name: Build Windows App
+    runs-on: windows-latest
+    needs: create-release
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -151,11 +114,41 @@ jobs:
           channel: stable
           flutter-version: '3.27.2'
 
-      - name: Install Dependencies
+      - name: Install dependencies
+        run: flutter pub get
+
+      - name: Build Windows
+        run: flutter build windows
+
+      - name: Zip Windows App
+        run: cd build/windows/x64/runner/Release && zip -r nt_helper-${{ needs.create-release.outputs.version }}.zip *
+
+      - name: Upload Windows Artifact to Release
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ needs.create-release.outputs.upload_url }}
+          asset_path: build/windows/x64/runner/Release/nt_helper-${{ needs.create-release.outputs.version }}.zip
+          asset_name: nt_helper-${{ needs.create-release.outputs.version }}-windows.zip
+          asset_content_type: application/zip
+
+  linux:
+    name: Build Linux App
+    runs-on: ubuntu-latest
+    needs: create-release
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: stable
+          flutter-version: '3.27.2'
+
+      - name: Install dependencies
         run: |
           sudo apt-get update
           sudo apt-get install clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
-
 
       - name: Install Flutter dependencies
         run: flutter pub get
@@ -163,9 +156,13 @@ jobs:
       - name: Build Linux
         run: flutter build linux
 
-      - name: Upload Linux App
-        uses: actions/upload-artifact@v4
-        with:
-          name: linux-app
-          path: build/linux/x64/release/bundle/
+      - name: Zip Linux App
+        run: cd build/linux/x64/release/bundle && zip -r nt_helper-${{ needs.create-release.outputs.version }}.zip *
 
+      - name: Upload Linux Artifact to Release
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ needs.create-release.outputs.upload_url }}
+          asset_path: build/linux/x64/release/bundle/nt_helper-${{ needs.create-release.outputs.version }}.zip
+          asset_name: nt_helper-${{ needs.create-release.outputs.version }}-linux.zip
+          asset_content_type: application/zip
